CinemanageSettings and AppSettings created according to the appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,29 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "AppSettings": {
+    "CinemanageSettings": {    
+      "DefaultBackdropSize": "original",
+      "DefaultPosterSizer": "w500",     
+      "DefaultCastImage": "/images/DefaultCastCrew.jpg",
+      "DefaultCollection": {
+        "Name": "All",
+        "Description": "All imported movies will automatically be assigned to the 'All' collection."
+      }   
+    },
+    "TMDBSettings": {
+      "BaseUrl": "https://api.themoviedb.org/3",
+      "BaseImagePath": "https://image.tmdb.org/t/p",
+      "BaseYoutubePath": "//www.youtube.com/watch?v=",
+      "QueryOptions": {
+        "Language": "en-US",
+        "AppendToResponse": "vieos, release_dates, credits",
+        "Page": "1"
+      }
+
+
+    }
+  }
 }
