created and registered TMDBMovieService class

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
   "AppSettings": {
     "CinemanageSettings": {    
       "DefaultBackdropSize": "original",
-      "DefaultPosterSizer": "w500",     
+      "DefaultPosterSize": "w500",     
       "DefaultCastImage": "/images/DefaultCastCrew.jpg",
       "DefaultCollection": {
         "Name": "All",
