fixed nullreference by adding the correct parameters to append to response at the appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -23,7 +23,7 @@
       "BaseYoutubePath": "//www.youtube.com/watch?v=",
       "QueryOptions": {
         "Language": "en-US",
-        "AppendToResponse": "vieos, release_dates, credits",
+        "AppendToResponse": "credits,images,videos,release_dates",
         "Page": "1"
       }
 
