trying to add watch providers

--- a/appsettings.json
+++ b/appsettings.json
@@ -23,7 +23,7 @@
       "BaseYoutubePath": "//www.youtube.com/watch?v=",
       "QueryOptions": {
         "Language": "en-US",
-        "AppendToResponse": "credits,images,videos,release_dates",
+        "AppendToResponse": "credits,images,videos,release_dates,watch/providers",
         "Page": "1"
       }
 
