--- a/Cinemanage.csproj
+++ b/Cinemanage.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+    <PackageReference Include="X.PagedList" Version="8.4.7" />
   </ItemGroup>
 
 </Project>
