moved api keys to appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,16 +8,19 @@
   "AllowedHosts": "*",
 
   "AppSettings": {
-    "CinemanageSettings": {    
+    "CinemanageSettings": {
+      "TMDBApiKey": "12645bb2d4981c8d75629d8eafe4598f",
+      "DefaultYouTubeKey": "Bq2fl8iD67Y",
       "DefaultBackdropSize": "original",
-      "DefaultPosterSize": "w500",     
+      "DefaultPosterSize": "w500",
       "DefaultCastImage": "/images/DefaultCastCrew.jpg",
       "DefaultCollection": {
         "Name": "All",
         "Description": "All imported movies will automatically be assigned to the 'All' collection."
-      }   
+      }
     },
     "TMDBSettings": {
+
       "BaseUrl": "https://api.themoviedb.org/3",
       "BaseImagePath": "https://image.tmdb.org/t/p",
       "BaseYoutubePath": "//www.youtube.com/watch?v=",
